github docs link

--- a/typedoc-theme/partials/header.hbs
+++ b/typedoc-theme/partials/header.hbs
@@ -123,6 +123,9 @@
             <li class="current">
               <a href="/api">API</a>
             </li>
+            <li>
+              <a href="https://github.com/lamplightdev/wafer">GitHub</a>
+            </li>
           </ul>
         </nav>
       </div>
