mobile menu update

--- a/typedoc-theme/partials/header.hbs
+++ b/typedoc-theme/partials/header.hbs
@@ -87,8 +87,9 @@
 
   @media (max-width: 889px) {
     #wafer-header nav ul li a {
-      width: 4.2rem;
-      padding: 0.8rem 0.8rem;
+      width: auto;
+      padding: 0.8rem 0.5rem;
+      font-size: 0.9rem;
     }
   }
 
